--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@supabase/realtime-js",
-  "version": "0.0.0-automated",
+  "name": "@kanli8_supabase/realtime-js",
+  "version": "2.4.0-2",
   "description": "Listen to realtime updates to your PostgreSQL database",
   "keywords": [
     "realtime",
